--- a/viikko3/web-login/report.html
+++ b/viikko3/web-login/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,30632],[[4,5,6,0,[],[1,10,6764],[],[[7,0,0,[],[1,996,2625],[]],[9,0,0,[],[1,3621,2593],[]]],[],[2,2,0,0]],[8,10,11,0,[],[1,6776,23854],[],[[12,0,0,[],[1,7680,6806],[]],[13,0,0,[],[1,14487,7785],[]],[14,0,0,[],[1,22273,7798],[]]],[],[3,3,0,0]]],[],[],[5,5,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,36032],[],[[4,0,0,[],[1,981,7926],[]],[5,0,0,[],[1,8908,8853],[]],[6,0,0,[],[1,17761,8859],[]],[7,0,0,[],[1,26621,8851],[]]],[],[4,4,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/mizhonka/palautusrepositorio/viikko3/web-login/src/tests","*src/tests","*Home","*/home/mizhonka/palautusrepositorio/viikko3/web-login/src/tests/home.robot","*src/tests/home.robot","*Click Login Link","*Login","*Click Register Link","*/home/mizhonka/palautusrepositorio/viikko3/web-login/src/tests/login.robot","*src/tests/login.robot","*Login With Correct Credentials","*Login With Incorrect Password","*Login With Nonexistent Username"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Register","*/home/mizhonka/palautusrepositorio/viikko3/web-login/src/tests/register.robot","*src/tests/register.robot","*Register With Valid Username And Password","*Register With Too Short Username And Valid Password","*Register With Valid Username And Invalid Password","*Register With Nonmatching Password And Password Confirmation"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:28","fail":0,"label":"All Tests","pass":5,"skip":0}],[],[{"elapsed":"00:00:31","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":5,"skip":0},{"elapsed":"00:00:07","fail":0,"id":"s1-s1","label":"Tests.Home","name":"Home","pass":2,"skip":0},{"elapsed":"00:00:24","fail":0,"id":"s1-s2","label":"Tests.Login","name":"Login","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:34","fail":0,"label":"All Tests","pass":4,"skip":0}],[],[{"elapsed":"00:00:36","fail":0,"id":"s1","label":"Register","name":"Register","pass":4,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1699968307559;
+window.output["baseMillis"] = 1699970664074;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 30644;
+window.output["generated"] = 36049;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
