--- a/viikko3/web-login/report.html
+++ b/viikko3/web-login/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,36032],[],[[4,0,0,[],[1,981,7926],[]],[5,0,0,[],[1,8908,8853],[]],[6,0,0,[],[1,17761,8859],[]],[7,0,0,[],[1,26621,8851],[]]],[],[4,4,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,30076],[],[[4,0,0,[],[1,932,3667],[]],[5,0,0,[],[1,4599,3986],[]],[6,0,0,[],[1,8586,3931],[]],[7,0,0,[],[1,12518,3988],[]],[8,0,0,[],[1,16507,6884],[]],[9,0,0,[],[1,23392,6424],[]]],[],[6,6,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Register","*/home/mizhonka/palautusrepositorio/viikko3/web-login/src/tests/register.robot","*src/tests/register.robot","*Register With Valid Username And Password","*Register With Too Short Username And Valid Password","*Register With Valid Username And Invalid Password","*Register With Nonmatching Password And Password Confirmation"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Register","*/home/mizhonka/palautusrepositorio/viikko3/web-login/src/tests/register.robot","*src/tests/register.robot","*Register With Valid Username And Password","*Register With Too Short Username And Valid Password","*Register With Valid Username And Invalid Password","*Register With Nonmatching Password And Password Confirmation","*Login After Successful Registration","*Login After Failed Registration"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:34","fail":0,"label":"All Tests","pass":4,"skip":0}],[],[{"elapsed":"00:00:36","fail":0,"id":"s1","label":"Register","name":"Register","pass":4,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:29","fail":0,"label":"All Tests","pass":6,"skip":0}],[],[{"elapsed":"00:00:30","fail":0,"id":"s1","label":"Register","name":"Register","pass":6,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1699970664074;
+window.output["baseMillis"] = 1699979913879;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 36049;
+window.output["generated"] = 30091;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
